  properly quote their argument lists.
  (Xavier Leroy, report by André Maroneze, review by Nicolás Ojeda Bär
   and David Allsopp)

- #9490, #9505: ensure proper rounding of file times returned by
  Unix.stat, Unix.lstat, Unix.fstat.
  (Xavier Leroy and Guillaume Melquiond, report by David Brown,
   review by Gabriel Scherer and David Allsopp)

### Tools:

- #6969: Argument -nocwd added to ocamldep
  (Muskan Garg, review by Florian Angeletti)

- #8676, #9594: turn debugger off in programs launched by the program
  being debugged
  (Xavier Leroy, report by Michael Soegtrop, review by Gabriel Scherer)

- #9057: aid debugging the debugger by preserving backtraces of unhandled
  exceptions.
  (David Allsopp, review by Gabriel Scherer)

- #9276: objinfo: cm[x]a print extra C options, objects and dlls in
  the order given on the cli. Follow up to #4949.
  (Daniel Bünzli, review by Gabriel Scherer)

- #463: objinfo: better errors on object files coming
  from a different (older or newer), incompatible compiler version.
  (Gabriel Scherer, review by Gabriel Radanne and Damien Doligez)

- #9181: make objinfo work on Cygwin and look for the caml_plugin_header
  symbol in both the static and the dynamic symbol tables.
  (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)

* #9197: remove compatibility logic from #244 that was designed to
  synchronize toplevel printing margins with Format.std_formatter,
  but also resulted in unpredictable/fragile changes to formatter
  margins.
  Setting the margins on the desired formatters should now work.
  typically on `Format.std_formatter`.
  Note that there currently is no robust way to do this from the
  toplevel, as applications may redirect toplevel printing. In
  a compiler/toplevel driver, one should instead access
  `Location.formatter_for_warnings`; it is not currently exposed
  to the toplevel.
  (Gabriel Scherer, review by Armaël Guéneau)

- #9207, #9210: fix ocamlyacc to work correctly with up to 255 entry